--- a/itis3135/styles/Specific styles/main.css
+++ b/itis3135/styles/Specific styles/main.css
@@ -9,10 +9,10 @@ html a{
     text-decoration: none;
 }
 body {
-    background-color: #212121;
+    background-color: #91adc2;
 }
 .container nav {
-    background-color: rgba(0, 0, 0, 0.338);
+    background-color: #2d3047;
     width:100%;
     height: 75px;
     position: fixed;
@@ -28,9 +28,8 @@ body {
     font-family: "Open Sans", sans-serif;
     color: white; */
 }
-
 .container nav ul{
-    width:75%;
+    width:80%;
     height: 100%;
     margin: 0 auto;
     list-style: none;
@@ -38,7 +37,7 @@ body {
 }
 
 .container nav ul li{
-    width: 17%;
+    width: 20%;
     float: left;
     text-align: center;
     color: #eee;
@@ -91,13 +90,11 @@ header{
     margin-bottom: 10px;
     text-align: center;
 }
-.row h1 {
+h1 {
+        color: #2d3047;
         padding-left: 20px;
         font-family: serif;
         font-size: 4rem;
-        background: linear-gradient(to right, #efff41ac, #f9a825a4, #f48fb1c7, #7e57c2b8, #7e57c276, #2195f3d1, #26c5dac4, #ff5722);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
 }
 .column {
     float: left;
@@ -124,16 +121,35 @@ main{
     padding-left: 15%;
 }
 footer {
-    background-color: rgba(0, 0, 0, 0.60);
+    background-color: #2d3047;
+    padding: 15px;
 }
 
 footer h3{
     color: white;
     font-family: serif;
-    font-size: 18px;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    width: 100%;
+    font-size: 20px;
     text-align: center;
     text-decoration: none;
+}
+footer .media{
+    margin: auto 0%;
+    text-align: center;
+    width: 98%
+}
+footer a li{
+    list-style: none;
+    margin: 0px 5px;
+    display: inline-block;
+    font-size: 20px;
+    padding: 10px 10px;
+    color: #fff;
+    border: 1px solid #fff;
+    border-radius: 50%;
+    transition: .5s;
+}
+a li:hover{
+    color: #ea3b50;
+    border: 1px solid #ea3b50;
+    transition: .5s;
 }
