--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -1,4 +1,3 @@
-@import  url("https://fonts.googleapis.com/css?family-Open+Sans");
 /* Default Stuff Styling*/
 html {
     margin: 0;
@@ -45,8 +44,8 @@ body {
 }
 
 .navbar nav ul li:hover{
-    color: #ea3b50;
-    box-shadow: inset 0 5px #ea3b50;
+    color: #2eef7e;
+    box-shadow: inset 0 5px #2eef7e;
 }
 .navbar nav ul li ul.sub-nav{
     position: absolute;
@@ -68,7 +67,7 @@ body {
 }
 
 .navbar nav ul li ul.sub-nav li:hover a{
-    color: #ea3b50;
+    color: #2eef7e;
 }
 .navbar nav ul li:hover ul.sub-nav{
     visibility: visible;
@@ -120,12 +119,15 @@ table tr{
 table .odd{
     background-color: rgba(32, 167, 215, 0.81)
 }
-footer {
+.mainFooter {
     background-color: #2d3047;
     padding: 15px;
     margin-top: 20px;
 }
-
+.validation{
+    text-align: center;
+    padding: 35px;
+}
 footer h3{
     color: white;
     font-family: serif;
@@ -134,7 +136,7 @@ footer h3{
     text-decoration: none;
 }
 footer h3 a:hover {
-    color: #ea3b50;
+    color: #2eef7e;
     transition: all 0.5s ease;
 }
 footer .media{
@@ -142,7 +144,7 @@ footer .media{
     text-align: center;
     width: 98%
 }
-footer a li{
+footer li{
     list-style: none;
     margin: 0px 5px;
     display: inline-block;
@@ -153,9 +155,9 @@ footer a li{
     border-radius: 50%;
     transition: .5s;
 }
-a li:hover{
-    color: #ea3b50;
-    border: 1px solid #ea3b50;
+footer li:hover{
+    color: #2eef7e;
+    border: 1px solid #2eef7e;
     transition: .5s;
 }
 
@@ -269,6 +271,9 @@ main .row{
     padding-bottom: 5px;
 }
 /* Course Assignments */
+.assignmentLinks h3{
+    padding-left: 3%;
+}
 .assignmentLinks ul li{
     font-size: 20px;
     font-weight:lighter;
@@ -281,7 +286,7 @@ main .row{
 
 
 .assignmentLinks ul li a:hover{
-    color: #ea3b50;
+    color: #2eef7e;
     transition: all 0.5s ease;
 }
 /* HTML Tables */
