--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <div class="mainFooter">
-        <h3><a href="breathtakingdalmadoodle.co">Designed by Breathtaking Dalmadoodle inc. &copy; 2022</a></h3>
+        <h3><a href="delunasdesigns.co">Designed by Deluna's Designs inc. &copy; 2022</a></h3>
         <div class="media">
             <ul>
                 <a href="https://www.freecodecamp.org/bryant_deluna" target="_blank"><li><i class="fa-brands fa-free-code-camp"></i></li></a>
