--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -450,7 +450,7 @@ button{
 }
 
   /* Calculator FCC */
-.calculator_fcc {
+.calculator {
   border-radius: 12px;
   box-shadow: 0 0 40px 0px rgba(0, 0, 0, 0.15);
   margin-left: auto;
@@ -477,6 +477,7 @@ button{
 
 .calculator__keys > * {
   background-color: #fff;
+  color: #111;
   padding: 0.5em 1.25em;
   position: relative;
   text-align: center;
