--- a/itis3135/accessability/components/header.html
+++ b/itis3135/accessability/components/header.html
@@ -4,7 +4,7 @@
             <ul>
                 <li><a href="./">Home</a></li>
                 <li><a href="introduction.html">About Me</a></li>
-                <li><a href="assignments.html">Assignments</a></li>
+                <li><a href="assignments.html">Course Assignments</a></li>
                  <li>Webpages
                    <ul class="sub-nav">
                        <li><a href="https://bryantd0208.github.io/">Github Root Page</a></li>
