--- a/itis3135/accessability/styles/default.css
+++ b/itis3135/accessability/styles/default.css
@@ -21,7 +21,7 @@ body {
     font-family: sans-serif;
 }
 .navbar nav ul{
-    width:90%;
+    width:75%;
     height: 100%;
     margin: 0 auto;
     list-style: none;
@@ -33,8 +33,8 @@ body {
     float: left;
     text-align: center;
     color: #eee;
-    padding: 24px 1vw;
-    font-size: min(max(1.25vw, 13px), 2.4vw);
+    padding: 24px 15px;
+    font-size: 18px;
     font-weight: bold;
     text-transform: uppercase;
     cursor: pointer;
@@ -60,7 +60,7 @@ body {
 }
 .navbar nav ul li ul.sub-nav li{
     color: #eee;
-    font-size: min(max(1.10vw, 12px), 1.15vw);
+    font-size: 14px;
     width: 90%;
     padding: 20px 0;
     text-decoration: none;
@@ -74,13 +74,13 @@ body {
     opacity: 1;
 }
 header{
-    padding-top: min(12vw, 50px);
+    padding-top: 4%;
     text-align: center;
 }
 h1 {
     color: #011627;
     font-family: serif;
-    font-size: min(50px, 5vw);
+    font-size: 50px
 }
 
 main{
@@ -310,8 +310,8 @@ main ol li{
     font-size: larger;
     padding: 0.2rem;
     width:60%;
-    margin: 0 auto;
-    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 main .tableCaption, figcaption{
     padding-bottom: 15px;
