--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -508,3 +508,22 @@ button{
   grid-column: -2;
   grid-row: 2 / span 4;
 }
+
+/* Client Project */
+.projectInfo {
+    text-align: left;
+    padding-left: 200px;
+    padding-right: 200px;
+    font-size: 18px;
+}
+.projectInfo h4 {
+    font-size: 20px;
+}
+.projectInfo p {
+    margin: 15px;
+}
+#wireframe, #sitemap {
+    width: 400px;
+    text-shadow: 0 1px 2px rgba(0,0,0,0.6);
+    border-radius: 10px;
+}
